k8s-yaml/deploymentvscodeserver.yaml
# Source: web/templates/deploymentvscodeserver.yaml
# 線上API編寫的部屬(如果使用者有說明需要API線上部屬服務的話)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "iii-devops-code-server-codeserver"
  labels:
    app: "iii-devops-code-server-codeserver"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "iii-devops-code-server-codeserver"
  template:
    metadata:
      labels:
        app: "iii-devops-code-server-codeserver"
    spec:
      imagePullSecrets:
        - name: pipeline-docker-registry
        - name: harbor-63
      securityContext:
        {}
      containers:
        - name: codeserver
          securityContext:
            {}
          image: ghcr.io/linuxserver/code-server
          imagePullPolicy: Always
          ports:
            - name: codeserver
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /config/workspace
              name: initrepo
          resources:
            {}
      # 匯入使用者的開發專案程式碼提供其線上進行修改
      volumes:
        - name: initrepo
          emptyDir: {}
