k8s-yaml/servicevscodeserver.yaml
# Source: web/templates/servicevscodeserver.yaml
# 線上API編寫的Service(如果使用者有說明需要API線上部屬服務的話)
apiVersion: v1
kind: Service
metadata:
  name: "iii-devops-code-server-codeserver-svc"
  labels:
    app: "iii-devops-code-server-codeserver"
spec:
  type: NodePort
  ports:
    - port: 8443
      targetPort: codeserver
      protocol: TCP
      name: codeserver
  selector:
    app: "iii-devops-code-server-codeserver"
