k8s-yaml/ingressvscodeserver.yaml
# Source: web/templates/ingressvscodeserver.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "iii-devops-code-server-codeserver-ing"
  labels:
    app: "iii-devops-code-server-flask"
spec:
#
  rules:
  - host: "vscode.master.iii-devops-code-server.10.20.0.74.xip.io"
    http:
      paths:
      - backend:
          serviceName: "iii-devops-code-server-codeserver-svc"
          servicePort: 8443
        path: "/"
        pathType: "ImplementationSpecific"
